src/tests/testfiles/binary-operators/37.txt
testfiles/binary-operators/37.c:11:5: error: lvalue required as left operand of assignment
     *(b+1) + 7 = 20;
     ^
testfiles/binary-operators/37.c:11:7: error: invalid operands to binary '+' (have 'int *' and 'int')
     *(b+1) + 7 = 20;
       ^
testfiles/binary-operators/37.c:13:5: error: lvalue required as left operand of assignment
     sum(1, 2) = 3;
     ^
testfiles/binary-operators/37.c:15:5: error: lvalue required as left operand of assignment
     1 + 2 = a;
     ^
testfiles/binary-operators/37.c:16:5: error: incompatible types when assigning to type 'char [2]' from type 'int'
     "3" = a;
     ^
testfiles/binary-operators/37.c:17:5: error: lvalue required as left operand of assignment
     5 && 9 = "hello";
     ^
